# AIPlayground

./: .gitignore  .gitmodules  README.md
CrewAISandbox/: README.md  main.py  pyproject.toml
CrewAISandbox/Agent/: agent.ipynb
CrewAISandbox/astro_crewai/: README.md  pyproject.toml  report.md
CrewAISandbox/astro_crewai/knowledge/: user_preference.txt
CrewAISandbox/astro_crewai/reports/: report.md
CrewAISandbox/astro_flow/: README.md  pyproject.toml
CrewAISandbox/astro_flow/output/: post.md
CrewAISandbox/default_crewai/: README.md  pyproject.toml  report.md
CrewAISandbox/default_flow/: README.md  pyproject.toml
CrewAISandbox/default_flow/output/: post.md
LangchainSandbox/: .gitignore  README.md  main_utils.py  pyproject.toml  requirements.txt  test.py
LangchainSandbox/Chains/: conditional_chains.py  news.txt  parallel_chains.py
LangchainSandbox/DocumentLoaders/: csv_loader.py  pdf_loader.py  text_loader.py  web_loader.py
LangchainSandbox/GoofyChatbot/: goofy_chatbot.py
LangchainSandbox/Misc/: llm_openai.py
LangchainSandbox/Models/: chatmodels_closesource.py  chatmodels_opensource.py
LangchainSandbox/OutputParser/: jsonparser.py  pydanticparser.py  stringparser.py  structuredparser.py
LangchainSandbox/PromptsNMessages/: messages.py  prompts.py
LangchainSandbox/Retrievers/: contextual_compression_retriever.ipynb  semantic_retriever.ipynb  wiki_retriever.ipynb
LangchainSandbox/Runnables/: runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequential.py
LangchainSandbox/StructuredOutput/: pydantic_validations.py  typedict_validation.py
LangchainSandbox/TLDRify/: app.py  css.txt  loader.py  model.py  prompt_generator.py  retriever.py  splitter.py  store.py
LangchainSandbox/TextSplitters/: doc_structure_splitter.py  length_splitter.py  text_structure_splitter.py
LangchainSandbox/TextSplitters/docs/: andromeda_paradox.txt  python_class.txt
LangchainSandbox/ToolCalling/: currencyconverter.py
LangchainSandbox/VectorStores/: chroma_vector_store.ipynb  faiss_vector_store.ipynb
LanggraphSandbox/: .gitignore  README.md  main.py  pyproject.toml  test_add_messages.py  test_main.py  test_script.py
LanggraphSandbox/.github/workflows/: ci.yaml
LanggraphSandbox/01_sequential_workflows/: 1-sequential_naive_workflow.ipynb  2-sequential_llm_workflow.ipynb  3-sequential_prompt_chaining.ipynb
LanggraphSandbox/01_sequential_workflows/files/: 1-outline.md  2-blog_content.md
LanggraphSandbox/02_parallel_workflows/: 1-parallel_naive_workflow.ipynb  2-parallel_llm_workflow.ipynb
LanggraphSandbox/02_parallel_workflows/configs/: params.yaml  prompts.yaml
LanggraphSandbox/02_parallel_workflows/files/: cta_feedback.md
LanggraphSandbox/03_conditional_workflows/: 1-conditional_naive_workflow.ipynb  2-conditional_llm_workflow.ipynb
LanggraphSandbox/03_conditional_workflows/configs/: params.yaml
LanggraphSandbox/04_iterative_workflows/: 1-iterative_naive_workflow.ipynb  2-iterative_llm_workflow.ipynb
LanggraphSandbox/04_iterative_workflows/configs/: prompts.yaml
LanggraphSandbox/05_goofy_chatbot/: goofy_chatbot.py
LanggraphSandbox/05_goofy_chatbot/configs/: params.yaml
LanggraphSandbox/05_goofy_chatbot/files/: messages.txt
LanggraphSandbox/06_persistence/: 1-persistence.ipynb  2-fault_tolerance.ipynb
LanggraphSandbox/06_persistence/configs/: prompts.yaml
LanggraphSandbox/06_persistence/files/: 1-presistance_joke.txt  1-presistance_state_history.json  2-fault_tolerance_joke.txt  2-fault_tolerance_state_history.json
LanggraphSandbox/07_streaming/: app.py  backend.py
LanggraphSandbox/07_streaming/styles/: styles.css
LanggraphSandbox/08_threading/: app.py  backend.py  chat_title_generator.py
LanggraphSandbox/08_threading/configs/: params.yaml  prompts.yaml
LanggraphSandbox/08_threading/styles/: styles.css
LanggraphSandbox/09_sqlite/: app.py  backend.py  chat_title_generator.py
LanggraphSandbox/09_sqlite/configs/: prompts.yaml
LanggraphSandbox/09_sqlite/styles/: styles.css
LanggraphSandbox/1-SequentialWorkflow/: 1-naive_workflow.ipynb  2-llm_workflow.ipynb  3-prompt_chaining.ipynb  3-sequential_prompt_chaining.ipynb
LanggraphSandbox/1-SequentialWorkflow/files/: 1-outline.md  2-blog_content.md  2-blog_summary.md  3-blog_summary.md  rouge.md
LanggraphSandbox/1-SequentialWorkflows/: 1-sequential_naive_workflow.ipynb  2-sequential_llm_workflow.ipynb  3-sequential_prompt_chaining.ipynb
LanggraphSandbox/1-SequentialWorkflows/files/: 1-outline.md  3-blog_summary.md  rouge.md
LanggraphSandbox/10_observability/: app.py  backend.py  chat_title_generator.py
LanggraphSandbox/10_observability/configs/: params.yaml  prompts.yaml
LanggraphSandbox/10_observability/utils/: chat.py  config.py  database.py  session.py  sidebar.py
LanggraphSandbox/11_tools/configs/: params.yaml
LanggraphSandbox/11_tools/src/: app.py  backend.py  chat_title_generator.py
LanggraphSandbox/11_tools/utils/: chat.py  config.py  database.py  sidebar.py  tools.py
LanggraphSandbox/12_rag/: main.py  rag.ipynb
LanggraphSandbox/12_rag/configs/: params.yaml  prompts.yaml
LanggraphSandbox/13_hitl/: 01_hitl.ipynb  01_hitl_chatbot.py  tools.py
LanggraphSandbox/14_stm/: 01_stm_postgres.ipynb  02_stm_trimming.ipynb  03_stm_summarization.ipynb
LanggraphSandbox/15_ltm/: 01_ltm_primitives.ipynb  02_ltm_postgres.ipynb
LanggraphSandbox/2-ParallelWorkflow/: 1-naive_parallel_workflow.ipynb  1-parallel_naive_workflow.ipynb  2-parallel_llm_workflow.ipynb
LanggraphSandbox/2-ParallelWorkflows/: 1-parallel_naive_workflow.ipynb  2-parallel_llm_workflow.ipynb
LanggraphSandbox/3-ConditionalWorkflows/: 1-conditional_naive_workflow.ipynb  2-conditional_llm_workflow.ipynb
LanggraphSandbox/4-IterativeWorkflows/: 1-iterative_naive_workflow.ipynb  2-iterative_llm_workflow.ipynb  iterative_llm_workflow.ipynb  iterative_naive_workflow.ipynb
LanggraphSandbox/6-Persistance/: 1-persistence.ipynb  2-fault_tolerance.ipynb
LanggraphSandbox/7-Streaming/: app.py  backend.py
LanggraphSandbox/langgraph_utils/: __init__.py
(+57 files in other folders)
