[project]
name = "langgraphsandbox"
version = "0.1.0"
description = "This is a playground repo where I test out Langgraph, LLMs (mainly Gemini), and RAG setups"
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "pydantic",
    "python-dotenv",
    "rich",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "langchain-community>=0.4.2",
    "duckduckgo-search>=8.1.1",
    "langchain-experimental>=0.4.2",
    "ddgs>=9.14.4",
]
