[project]
name = "langgraphsandbox"
version = "0.1.0"
description = "This is a playground repo where I test out Langgraph, LLMs (mainly Gemini), and RAG setups"
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "pydantic",
    "python-dotenv",
    "rich",
    "pandas",
    "numpy",
    "langchain-community",
    "duckduckgo-search",
    "langchain-experimental",
    "ddgs",
    "networkx",
    "matplotlib",
    "catppuccin",
    "pytest",
    "termcolor",
    "uuid",
    "streamlit",
    "watchdog",
    "langgraph-checkpoint-sqlite",
    "sympy",
    "langchain-chroma",
    "pypdf>=6.14.2",
]

[tool.setuptools]
packages = ["langgraph_utils"]

[dependency-groups]
dev = [
    "ipykernel",
    "ipython",
]
