[project]
name = "astro_crewai"
version = "0.1.0"
description = "astro_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.3",
]

[project.scripts]
astro_crewai = "astro_crewai.main:run"
run_crew = "astro_crewai.main:run"
train = "astro_crewai.main:train"
replay = "astro_crewai.main:replay"
test = "astro_crewai.main:test"
run_with_trigger = "astro_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astro_crewai"]

[tool.crewai]
type = "crew"

[tool.ruff]
ignore = ["I001", "SIM117", "BLE001", "UP006", "UP035", "F401", "F841", "RUF019", "UP039", "F821", "F404", "TRY002", "DTZ005"]
