[project]
name = "default_flow"
version = "0.1.0"
description = "default_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.3",
]

[project.scripts]
kickoff = "default_flow.main:kickoff"
run_crew = "default_flow.main:kickoff"
plot = "default_flow.main:plot"
run_with_trigger = "default_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/default_flow"]

[tool.crewai]
type = "flow"
